Torque: fix z-index for mobile toggler

--- a/packages/torque/src/styles/layout/_header.mobile.scss
+++ b/packages/torque/src/styles/layout/_header.mobile.scss
@@ -20,7 +20,7 @@
       }
 
       .header_icon {
-        z-index: 10001;
+        z-index: 100001;
         padding-right: 10px;
       }
     }
